# rudp-bench

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  go.mod  tasks.md
.github/workflows/: bundle.yml  ci.yml  v2.yml
adapters/apex_rudp/: CMakeLists.txt  apex_rudp_adapter.cc
adapters/coop_rudp/: CMakeLists.txt  coop_rudp_adapter.cc
adapters/enet/: CMakeLists.txt  enet_adapter.cc
adapters/gns/: CMakeLists.txt  gns_adapter.cc
adapters/kcp/: CMakeLists.txt  kcp_adapter.cc
adapters/litenetlib/: Program.cs  litenetlib_adapter.csproj
adapters/lsquic/: CMakeLists.txt  lsquic_adapter.cc  lsquic_cert_helper.c  lsquic_cert_helper.h  lsquic_exports.map
adapters/mini_rudp/: CMakeLists.txt  mini_rudp_adapter.cc
adapters/msquic/: CMakeLists.txt  msquic_adapter.cc
adapters/quiche/: CMakeLists.txt  quiche_adapter.cc
adapters/raknet/: CMakeLists.txt  rak_family_adapter.h  raknet_adapter.cc
adapters/raw_udp/: CMakeLists.txt  raw_udp_adapter.cc
adapters/slikenet/: CMakeLists.txt  slikenet_adapter.cc
adapters/udt4/: CMakeLists.txt  udt4_adapter.cc
adapters/yojimbo/: CMakeLists.txt  yojimbo_adapter.cc
benchkit/: CMakeLists.txt
benchkit/include/: benchkit.h
benchkit/src/: benchkit_internal.h  clock.c  control.c  metrics.c  payload.c  plan.c
benchkit/tests/: fixture_transport.c  fixture_transport.h  test_authoritative_metrics.c  test_common.h  test_control.c  test_fault_inject.c  test_metrics_zero.c  test_payload.c  test_plan.c
benchspec/: README.md
calibration/: README.md  duration_invariance.sh
cmd/rudp-bench-canonical/: main.go  main_test.go
cmd/rudp-benchctl/: main.go
coop_rudp/: CMakeLists.txt  rudp.c  rudp.h
docs/: CANONICAL.md  FINAL_OUTPUT.md  README.md  adapter-audit.md  battle.md  checklist.md  dev-notes.md  glossary.md  improvements.md  ledger.md  profiles.md  provisional-loss-smoke.md  reference-rig.md  sentinel.md  tasks.md
docs/adr/: 0000-project-purpose.md  0001-battle-purpose.md  0002-battle-methodology.md  0002-benchmark-methodology.md  0003-battle-matrix.md  0004-reference-preset.md  0005-reference-fleet.md  0006-reference-campaign-v1.md
docs/log/: 2026-04-28-rudp-bench-design.md  2026-04-28-rudp-bench-plan-1-foundation.md  2026-04-28-rudp-bench-plan-3-kcp.md  2026-04-28-rudp-bench-plan-7-gns.md  2026-07-02-rudp-bench-v2-design.md  adapter-audit.md  canonical-v1.md  dev-notes.md  tasks.md
docs/measurements/: 2026-07-10-battle-enet.md  2026-07-10-battle-gns.md  2026-07-10-battle-litenetlib.md  2026-07-10-battle-magiconion.md  2026-07-10-battle-msquic.md  2026-07-10-battle-websocket.md  2026-07-10-ceiling-wired-v3.md  2026-07-11-provisional-loss-smoke.md  2026-07-11-scenario-conformance.md  2026-07-12-class-mapping-conformance.md  2026-07-12-class-mapping-kcp.md  2026-07-18-aa-session1-8xlarge.md  2026-07-18-ramp-equivalence.md  2026-07-23-pilot-wan-v1.md  2026-07-23-ref1-enet.md  CURRENT.md  README.md  current.md
harness/: CMakeLists.txt  adapter.h  adapter_registry.cc  adapter_registry.h  csv_writer.cc  csv_writer.h  inbound_queue.h  main.cc  metrics.cc  metrics.h  proc_sampler.cc  proc_sampler.h  runner.cc  runner.h  scenario.cc  scenario.h  sliding_dedup_window.h  socket_buffer.cc  socket_buffer.h
internal/bench/: capabilities.go  capabilities_test.go  config.go  config_test.go  profiles.go  profiles_test.go
internal/cli/: command.go  command_test.go  flags.go
internal/doctor/: check.go
internal/report/: publish.go  report.go  svg.go
internal/result/: aggregate.go  aggregate_test.go  capacity.go  capacity_test.go  combine.go  csv.go  histogram.go  histogram_test.go  reduce.go  reduce_test.go
internal/runner/: exec.go  isolate.go  netem.go  netem_test.go
internal/sweep/: manifest.go  manifest_test.go  plan.go  sweep.go
orchestrator/aggregate/: aggregate.go  bootstrap.go  bootstrap_test.go  boundary.go  boundary_test.go  capacity.go  capacity_test.go  helpers.go
orchestrator/block/: affinity_linux.go  affinity_linux_test.go  block.go
orchestrator/boundary/: boundary.go  boundary_test.go
orchestrator/conformance/: config.go  config_test.go  doctor_gate.go  driver.go  driver_test.go  extract.go  extract_test.go  mapping.go  mapping_test.go  persist.go  (+2 more)
scenarios/: canonical.json  quick.json
scripts/: aggregate_runs.py  bench_isolate.sh  build-bundle.sh  capabilities.py  clean_generated.sh  combine_clients.py  netem.sh  plot.py  profile_code_gprofng.sh  publish_canonical_result.py  reduce_result.py  render_canonical_report.py  requirements.txt  run-ci-bench.sh  run-class-mapping-conformance.sh  run-provisional-loss-smoke.sh  run-scenario-conformance-local.sh  run-sentinel.sh  run-sweep.sh  run_canonical_tests.sh  run_final_saturation_profiles.py  run_phase1.sh  run_phase1_quick.sh  run_production_profiles.sh  run_remeasure.sh  run_saturation.py  session_bundle_manifest.py  set_loss.sh  test_session_bundle_manifest.py
servers/: describe_contract.py  ramp.h  scenario_cli.h
servers/enet/: CMakeLists.txt  README.md  client.c  server.c  smoke_test.py
servers/gns/: CMakeLists.txt  README.md  client.cc  gns_common.h  server.cc  smoke_test.py
servers/kcp/: CMakeLists.txt  README.md  client.c  kcp_common.h  server.c  smoke_test.py
servers/msquic/: CMakeLists.txt  README.md  client.cc  msquic_common.cc  msquic_common.h  server.cc  smoke_test.py
servers/raw_udp/: CMakeLists.txt  README.md  client.c  server.c  smoke_test.py
tests/: CMakeLists.txt  test_adapter_registry.cc  test_aggregate_runs.py  test_apex_rudp_smoke.cc  test_canonical_profiles.py  test_combine_clients.py  test_coop_rudp.cc  test_coop_rudp_adapter_smoke.cc  test_csv_writer.cc  test_enet_smoke.cc  test_gns_smoke.cc  test_inbound_queue.cc  test_kcp_smoke.cc  test_litenetlib_smoke.sh  test_lsquic_smoke.cc  test_metrics.cc  test_mini_rudp_smoke.cc  test_msquic_smoke.cc  test_phase_runner.py  test_proc_sampler.cc  test_quiche_smoke.cc  test_raknet_smoke.cc  test_raw_udp_smoke.cc  test_reduce_result.py  test_runner_loopback.cc  test_scenario.cc  test_slikenet_smoke.cc  test_socket_buffer.cc  test_udt4_smoke.cc  test_yojimbo_smoke.cc
(+491 files in other folders)
